#755 Refactor common proxy factory and parameter handling

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,9 @@ logbackVersion=1.2.11
 reflectionsVersion=0.10.2
 jakartaInjectVersion=2.0.1
 
+javassistVersion=3.28.0-GA
+cglibVersion=3.3.0
+
 # Testing API versions
 junitVersion=5.8.2
 mockitoVersion=4.5.1
