--- a/hartshorn-core/hartshorn-core.gradle
+++ b/hartshorn-core/hartshorn-core.gradle
@@ -19,7 +19,9 @@ apply from: "$project.rootDir/gradle/publications.gradle"
 
 dependencies {
     api "jakarta.inject:jakarta.inject-api:$jakartaInjectVersion"
-    
+
     implementation "org.reflections:reflections:$reflectionsVersion"
     implementation "ch.qos.logback:logback-classic:$logbackVersion"
+    implementation "org.javassist:javassist:$javassistVersion"
+    implementation "cglib:cglib:$cglibVersion"
 }
