--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@
 projectGroup=org.dockbox.hartshorn
 projectId=hartshorn
 projectName=Hartshorn
-projectVersion=22.3
+projectVersion=22.4-dev
 
 # Core API versions
 slf4jVersion=1.7.36
