--- a/gradle/publications.gradle
+++ b/gradle/publications.gradle
@@ -24,7 +24,7 @@ publishing {
                 }
                 licenses {
                     license {
-                        name = 'GNU Lesser General Public License v2.1'
+                        name = 'Apache License, Version 2.0'
                         url = 'https://github.com/GuusLieben/Hartshorn/blob/develop/LICENSE'
                         distribution = "repo"
                     }
