--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ slf4jVersion=1.7.36
 logbackVersion=1.2.11
 reflectionsVersion=0.10.2
 jakartaInjectVersion=2.0.1
-
+jakartaAnnotationVersion=2.1.1
 javassistVersion=3.28.0-GA
 cglibVersion=3.3.0
 
