#812 Verify Scala language compatibility

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,7 +57,8 @@ mssql = "11.2.0.jre17"
 mysql = "8.0.30"
 postgresql = "42.5.0"
 reflections = "0.10.2"
-slf4j = "2.0.0"
+scala = "2.13.8"
+slf4j = "1.7.36"
 test-containers = "1.17.3"
 woodstox = "4.4.1"
 
@@ -109,6 +110,7 @@ mssql = { module = "com.microsoft.sqlserver:mssql-jdbc", version.ref = "mssql" }
 mysql = { module = "mysql:mysql-connector-java", version.ref = "mysql" }
 postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
 reflections = { module = "org.reflections:reflections", version.ref = "reflections" }
+scala = { module = "org.scala-lang:scala-library", version.ref = "scala" }
 slf4j = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 woodstox = { module = "org.codehaus.woodstox:woodstox-core-asl", version.ref = "woodstox" }
 
