--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -21,17 +21,21 @@ jobs:
         run: ./gradlew checkLicenses
   build:
     needs: [license]
+    strategy:
+      fail-fast: false
+      matrix:
+        java: [17, 18, 19]
     name: Build all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: ${{ matrix.java }}
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Build all
+      - name: "Build (Java ${{ matrix.java }})"
         run: ./gradlew build -x test
   test:
     needs: [license, build]
