--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -1,6 +1,6 @@
 name: Hartshorn
 
-on: [pull_request]
+on: pull_request
 
 jobs:
   license:
@@ -55,6 +55,24 @@ jobs:
         run: ./gradlew test
   coverage:
     needs: [test]
+    strategy:
+      fail-fast: false
+      matrix:
+        module: [
+          "cache",
+          "commands",
+          "config",
+          "core",
+          "data",
+          "events",
+          "hsl",
+          "i18n",
+          "jpa",
+          "reporting",
+          "test-suite",
+          "web",
+        ]
+    name: Code coverage
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -64,13 +82,17 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Test and verify coverage
-        run: ./gradlew jacocoTestCoverageVerification
+      - name: Run tests
+        run: ./gradlew :hartshorn-${{ matrix.module }}:test
+      - name: Create and verify coverage report
+        run: ./gradlew :hartshorn-${{ matrix.module }}:jacocoTestCoverageVerification
       - name: Add coverage to PR
         id: jacoco
         uses: madrapps/jacoco-report@v1.3
         with:
-          paths: ${{ github.workspace }}/build/reports/jacoco/testCoverage/testCoverage.xml
+          title: "Code coverage: ${{ matrix.module }}"
+          update-comment: true
+          paths: ${{ github.workspace }}/hartshorn-${{ matrix.module }}/build/reports/jacoco/testCoverage/testCoverage.xml
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 40
           min-coverage-changed-files: 60
