--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -34,14 +34,32 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: "Build (Java ${{ matrix.java }})"
         run: ./gradlew build -x test
-  test:
+  testSource:
     needs: [license, build]
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-latest, macos-latest]
-        java: [17, 18, 19]
-    name: Unit tests
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    name: Unit tests (source)
+    runs-on: "${{ matrix.os }}"
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: "Unit testing (OS: ${{ matrix.os }}, Java: 17)"
+        run: ./gradlew test
+  testTarget:
+    needs: [license, build]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        java: [18, 19]
+    name: Unit tests (target)
     runs-on: "${{ matrix.os }}"
     steps:
       - uses: actions/checkout@v2
@@ -54,7 +72,7 @@ jobs:
       - name: "Unit testing (OS: ${{ matrix.os }}, Java: ${{ matrix.java }})"
         run: ./gradlew test
   coverage:
-    needs: [test]
+    needs: [testSource]
     strategy:
       fail-fast: false
       matrix:
