--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -102,8 +102,6 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Run tests
         run: ./gradlew :hartshorn-${{ matrix.module }}:test
-      - name: Create and verify coverage report
-        run: ./gradlew :hartshorn-${{ matrix.module }}:jacocoTestCoverageVerification
       - name: Add coverage to PR
         id: jacoco
         uses: madrapps/jacoco-report@v1.3
@@ -112,6 +110,7 @@ jobs:
           update-comment: true
           paths: ${{ github.workspace }}/hartshorn-${{ matrix.module }}/build/reports/jacoco/test/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 40
+          min-coverage-overall: 60
           min-coverage-changed-files: 60
-
+      - name: Verify coverage report
+        run: ./gradlew :hartshorn-${{ matrix.module }}:jacocoTestCoverageVerification
