--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -16,13 +16,27 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Check license headers
         run: ./gradlew checkLicenses
-  build:
+  buildSource:
     needs: [license]
+    name: Build all (source JDK)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: "Build (Java ${{ matrix.java }})"
+        run: ./gradlew build -x test
+  buildTarget:
+    needs: [buildSource]
     strategy:
       fail-fast: false
       matrix:
-        java: [17, 18, 19]
-    name: Build all
+        java: [18, 19]
+    name: Build all (target JDK ${{ matrix.java }})
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -35,12 +49,12 @@ jobs:
       - name: "Build (Java ${{ matrix.java }})"
         run: ./gradlew build -x test
   testSource:
-    needs: [license, build]
+    needs: [buildSource]
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-    name: Unit tests (source)
+    name: Unit tests (source JDK)
     runs-on: "${{ matrix.os }}"
     steps:
       - uses: actions/checkout@v2
@@ -53,13 +67,13 @@ jobs:
       - name: "Unit testing (OS: ${{ matrix.os }}, Java: 17)"
         run: ./gradlew test
   testTarget:
-    needs: [license, build]
+    needs: [testSource, buildTarget]
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         java: [18, 19]
-    name: Unit tests (target)
+    name: Unit tests (target JDK ${{ matrix.java }})
     runs-on: "${{ matrix.os }}"
     steps:
       - uses: actions/checkout@v2
