--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,52 +46,52 @@ hamcrest = "2.2"
 hibernate = "6.1.5.Final"
 httpclient = "4.5.13"
 jackson = "2.13.3"
-jakarta-annotations = "2.1.1"
-jakarta-inject = "2.0.1"
-jakarta-persistence = "3.1.0"
-jakarta-servlet = "6.0.0"
+jakartaAnnotations = "2.1.1"
+jakartaInject = "2.0.1"
+jakartaPersistence = "3.1.0"
+jakartaServlet = "6.0.0"
 jetty = "11.0.11"
-junit-jupiter = "5.9.0"
+junitJupiter = "5.9.0"
 javassist = "3.29.1-GA"
 logback = "1.2.11"
-maria-db = "3.0.7"
-mockito-inline = "4.7.0"
+mariaDb = "3.0.7"
+mockitoInline = "4.7.0"
 mssql = "11.2.0.jre17"
 mysql = "8.0.30"
 postgresql = "42.5.0"
 scala = "2.13.8"
 slf4j = "1.7.36"
-test-containers = "1.17.3"
+testContainers = "1.17.3"
 woodstox = "4.4.1"
 
 [libraries]
 #
 # Library groups in alphabetical order.
 #
-jackson-core = { module = "com.fasterxml.jackson.core:jackson-core", version.ref = "jackson" }
-jackson-dataformat-properties = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-properties", version.ref = "jackson" }
-jackson-dataformat-toml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-toml", version.ref = "jackson" }
-jackson-dataformat-xml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml", version.ref = "jackson" }
-jackson-dataformat-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jackson" }
+jacksonCore = { module = "com.fasterxml.jackson.core:jackson-core", version.ref = "jackson" }
+jacksonDataformatProperties = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-properties", version.ref = "jackson" }
+jacksonDataformatToml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-toml", version.ref = "jackson" }
+jacksonDataformatXml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml", version.ref = "jackson" }
+jacksonDataformatYaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jackson" }
 
-jakarta-annotations = { module = "jakarta.annotation:jakarta.annotation-api", version.ref = "jakarta-annotations" }
-jakarta-inject = { module = "jakarta.inject:jakarta.inject-api", version.ref = "jakarta-inject" }
-jakarta-persistence = { module = "jakarta.persistence:jakarta.persistence-api", version.ref = "jakarta-persistence" }
-jakarta-servlet = { module = "jakarta.servlet:jakarta.servlet-api", version.ref = "jakarta-servlet" }
+jakartaAnnotations = { module = "jakarta.annotation:jakarta.annotation-api", version.ref = "jakartaAnnotations" }
+jakartaInject = { module = "jakarta.inject:jakarta.inject-api", version.ref = "jakartaInject" }
+jakartaPersistence = { module = "jakarta.persistence:jakarta.persistence-api", version.ref = "jakartaPersistence" }
+jakartaServlet = { module = "jakarta.servlet:jakarta.servlet-api", version.ref = "jakartaServlet" }
 
-jetty-servlet = { module = "org.eclipse.jetty:jetty-servlet", version.ref = "jetty" }
-jetty-server = { module = "org.eclipse.jetty:jetty-server", version.ref = "jetty" }
+jettyServlet = { module = "org.eclipse.jetty:jetty-servlet", version.ref = "jetty" }
+jettyServer = { module = "org.eclipse.jetty:jetty-server", version.ref = "jetty" }
 
-junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiter" }
-junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
-junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit-jupiter" }
+junitJupiterApi = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junitJupiter" }
+junitJupiterEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiter" }
+junitJupiterParams = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiter" }
 
-test-containers = { module = "org.testcontainers:testcontainers", version.ref = "test-containers" }
-test-containers-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "test-containers" }
-test-containers-mysql = { module = "org.testcontainers:mysql", version.ref = "test-containers"}
-test-containers-mariadb = { module = "org.testcontainers:mariadb", version.ref = "test-containers"}
-test-containers-postgresql = { module = "org.testcontainers:postgresql", version.ref = "test-containers"}
-test-containers-mssqlserver = { module = "org.testcontainers:mssqlserver", version.ref = "test-containers"}
+testContainers = { module = "org.testcontainers:testcontainers", version.ref = "testContainers" }
+testContainersJunit = { module = "org.testcontainers:junit-jupiter", version.ref = "testContainers" }
+testContainersMysql = { module = "org.testcontainers:mysql", version.ref = "testContainers"}
+testContainersMariadb = { module = "org.testcontainers:mariadb", version.ref = "testContainers"}
+testContainersPostgresql = { module = "org.testcontainers:postgresql", version.ref = "testContainers"}
+testContainersMssqlserver = { module = "org.testcontainers:mssqlserver", version.ref = "testContainers"}
 
 #
 # Libraries in alphabetical order
@@ -100,80 +100,71 @@ antlr = { module = "org.antlr:antlr4", version.ref = "antlr" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version.ref = "caffeine" }
 cglib = { module = "cglib:cglib", version.ref = "cglib" }
 derby = { module = "org.apache.derby:derby", version.ref = "derby" }
-derby-tools = { module = "org.apache.derby:derbytools", version.ref = "derby" }
+derbyTools = { module = "org.apache.derby:derbytools", version.ref = "derby" }
 freemarker = { module = "org.freemarker:freemarker", version.ref = "freemarker" }
 groovy = { module = "org.apache.groovy:groovy-all", version.ref = "groovy" }
 hamcrest = { module = "org.hamcrest:hamcrest-core", version.ref = "hamcrest" }
-hibernate-core = { module = "org.hibernate:hibernate-core", version.ref = "hibernate" }
+hibernateCore = { module = "org.hibernate:hibernate-core", version.ref = "hibernate" }
 httpclient = { module = "org.apache.httpcomponents:httpclient", version.ref = "httpclient" }
 javassist = { module = "org.javassist:javassist", version.ref = "javassist" }
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
-maria-db = { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "maria-db" }
-mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockito-inline" }
+mariaDb = { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "mariaDb" }
+mockitoInline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
 mssql = { module = "com.microsoft.sqlserver:mssql-jdbc", version.ref = "mssql" }
 mysql = { module = "mysql:mysql-connector-java", version.ref = "mysql" }
 postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
 scala = { module = "org.scala-lang:scala-library", version.ref = "scala" }
 slf4j = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 woodstox = { module = "org.codehaus.woodstox:woodstox-core-asl", version.ref = "woodstox" }
-checker-qual = { module = "org.checkerframework:checker-qual", version.ref = "checker" }
+checkerQual = { module = "org.checkerframework:checker-qual", version.ref = "checker" }
 
 [bundles]
 #
 # Bundles in alphabetical order.
 # Dependencies per bundle should also be in alphabetical order.
 #
-checkerQual = [
-    "checker-qual",
-]
 databaseDrivers = [
     "derby",
-    "derby-tools",
-    "maria-db",
+    "derbyTools",
+    "mariaDb",
     "mssql",
     "mysql",
     "postgresql",
 ]
 databaseTestContainers = [
-    "test-containers-mariadb",
-    "test-containers-mssqlserver",
-    "test-containers-mysql",
-    "test-containers-postgresql",
+    "testContainersMariadb",
+    "testContainersMssqlserver",
+    "testContainersMysql",
+    "testContainersPostgresql",
 ]
 hibernate = [
     "antlr",
-    "hibernate-core",
+    "hibernateCore",
     "woodstox",
 ]
 jackson = [
-    "jackson-core",
-    "jackson-dataformat-properties",
-    "jackson-dataformat-toml",
-    "jackson-dataformat-xml",
-    "jackson-dataformat-yaml",
+    "jacksonCore",
+    "jacksonDataformatProperties",
+    "jacksonDataformatToml",
+    "jacksonDataformatXml",
+    "jacksonDataformatYaml",
 ]
 jakarta = [
-    "jakarta-annotations",
-    "jakarta-inject",
-    "jakarta-persistence",
+    "jakartaAnnotations",
+    "jakartaInject",
+    "jakartaPersistence",
 ]
 jetty = [
-    "jetty-server",
-    "jetty-servlet",
-]
-servlet = [
-    "jakarta-servlet",
+    "jettyServer",
+    "jettyServlet",
 ]
 test = [
     "hamcrest",
-    "junit-jupiter-api",
-    "junit-jupiter-params",
-    "mockito-inline",
+    "junitJupiterApi",
+    "junitJupiterParams",
+    "mockitoInline",
 ]
 testContainers = [
-    "test-containers",
-    "test-containers-junit",
-]
-testRuntime = [
-    "junit-jupiter-engine",
+    "testContainers",
+    "testContainersJunit",
 ]
