--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -1,12 +1,14 @@
-name: Hartshorn OWASP Dependency Check
+name: Hartshorn Gradle Plugins
 
 on: pull_request
 
 jobs:
-  depCheck:
-    name: Gradle dependency check
+  test:
+    name: Verify Gradle Plugins
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: gradle/plugins
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
@@ -15,5 +17,5 @@ jobs:
           java-version: 17
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Analyze dependencies
-        run: ./gradlew dependencyCheckAnalyze
+      - name: Verify plugins
+        run: ./gradlew test
