#823 Verify licenses on Gradle plugins

--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -3,7 +3,24 @@ name: Hartshorn Gradle Plugins
 on: pull_request
 
 jobs:
+  license:
+    name: License check
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: gradle/plugins
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Check license headers
+        run: ./gradlew checkLicenses
   test:
+    needs: [license]
     name: Verify Gradle Plugins
     runs-on: ubuntu-latest
     defaults:
