--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -100,7 +100,6 @@ jobs:
       - name: "Unit testing (OS: ${{ matrix.os }}, Java: ${{ matrix.java }})"
         run: ./gradlew test
   coverage:
-    needs: [testSource]
     strategy:
       fail-fast: false
     name: Code coverage
@@ -121,7 +120,17 @@ jobs:
         with:
           title: Code coverage
           update-comment: true
-          paths: ${{ github.workspace }}/hartshorn-cache/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-commands/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-config/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-core/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-events/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-hsl/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-i18n/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-jpa/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-reporting/build/reports/jacoco/test/jacocoTestReport.xml,${{ github.workspace }}/hartshorn-web/build/reports/jacoco/test/jacocoTestReport.xml
+          paths: |
+            ${{ github.workspace }}/hartshorn-cache/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-commands/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-config/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-core/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-events/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-hsl/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-i18n/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-jpa/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-reporting/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-web/build/reports/jacoco/test/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 80
           min-coverage-changed-files: 80
