--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -100,6 +100,7 @@ jobs:
       - name: "Unit testing (OS: ${{ matrix.os }}, Java: ${{ matrix.java }})"
         run: ./gradlew test
   coverage:
+    needs: [testSource]
     strategy:
       fail-fast: false
     name: Code coverage
@@ -130,6 +131,7 @@ jobs:
             ${{ github.workspace }}/hartshorn-i18n/build/reports/jacoco/test/jacocoTestReport.xml,
             ${{ github.workspace }}/hartshorn-jpa/build/reports/jacoco/test/jacocoTestReport.xml,
             ${{ github.workspace }}/hartshorn-reporting/build/reports/jacoco/test/jacocoTestReport.xml,
+            ${{ github.workspace }}/hartshorn-test-suite/build/reports/jacoco/test/jacocoTestReport.xml,
             ${{ github.workspace }}/hartshorn-web/build/reports/jacoco/test/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 80
