--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -21,11 +21,12 @@ jobs:
     name: License check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up source JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Check license headers
@@ -35,11 +36,12 @@ jobs:
     name: Build all (source JDK)
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up source JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: "Build (source JDK)"
@@ -53,11 +55,12 @@ jobs:
     name: Build all (target JDK ${{ matrix.java }})
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java }}
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: "Build (Java ${{ matrix.java }})"
@@ -71,11 +74,12 @@ jobs:
     name: Unit tests (source JDK)
     runs-on: "${{ matrix.os }}"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up source JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: "Unit testing (OS: ${{ matrix.os }}, source JDK)"
@@ -90,11 +94,12 @@ jobs:
     name: Unit tests (target JDK ${{ matrix.java }})
     runs-on: "${{ matrix.os }}"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java }}
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: "Unit testing (OS: ${{ matrix.os }}, Java: ${{ matrix.java }})"
@@ -106,11 +111,12 @@ jobs:
     name: Code coverage
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up source JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run tests
