--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -120,7 +120,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run tests
-        run: ./gradlew test
+        run: ./gradlew jacocoMergedReport
       - name: Add coverage to PR
         id: jacoco
         uses: madrapps/jacoco-report@v1.3
