--- a/.github/workflows/license_check.yml
+++ b/.github/workflows/license_check.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Check license headers
@@ -29,6 +30,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Check license headers
