--- a/.github/workflows/owasp_dependency_check.yml
+++ b/.github/workflows/owasp_dependency_check.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 17
+          distribution: temurin
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Analyze dependencies
