--- a/.github/workflows/license_check.yml
+++ b/.github/workflows/license_check.yml
@@ -15,6 +15,8 @@ jobs:
           distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Check license headers
         run: ./gradlew checkLicenses
 
@@ -33,5 +35,7 @@ jobs:
           distribution: temurin
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Check license headers
         run: ./gradlew test
