--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,27 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
+            <!-- OWASP Dependency check, to ensure no vulnerabilities are present in the dependencies -->
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>8.4.0</version>
+                <configuration>
+                    <failBuildOnCVSS>1</failBuildOnCVSS>
+                    <suppressionFiles>
+                        <suppressionFile>hartshorn-parent/dependency-check-suppressions.xml</suppressionFile>
+                    </suppressionFiles>
+                    <reportOutputDirectory>${project.build.directory}/dependency-check-report</reportOutputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
