--- a/hartshorn-parent/pom.xml
+++ b/hartshorn-parent/pom.xml
@@ -109,6 +109,11 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>${java.version}</release>
+                    <fork>true</fork>
+                    <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -168,5 +173,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
