#985 Relocate artifacts to selene-assembly/distributions

--- a/hartshorn-parent/pom.xml
+++ b/hartshorn-parent/pom.xml
@@ -116,6 +116,31 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <!--
+                    Targets root hartshorn-assembly, so all distributions can easily be located. This deviates from the
+                    standard Maven convention of putting the JAR in the target directory of the project itself, but
+                    this is a multi-module project and we want to keep all distributions in one place.
+
+                    For reference:
+                    - project: Actual project
+                    - project.parent: hartshorn-parent
+                    - project.parent.parent: root POM
+                    -->
+                    <outputDirectory>${project.parent.parent.basedir}/hartshorn-assembly/distributions/${version}</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <!-- Testing -->
             <plugin>
@@ -134,18 +159,6 @@
                                 <source>src/testFixtures/java</source>
                             </sources>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
