--- a/hartshorn-bom/pom.xml
+++ b/hartshorn-bom/pom.xml
@@ -9,12 +9,16 @@
     <version>0.5.0</version>
 
     <properties>
+        <!-- Language support, keep in sync with module parent -->
+        <groovy.version>4.0.14</groovy.version>
+        <kotlin.version>1.9.10</kotlin.version>
+        <slf4j.version>2.0.7</slf4j.version>
+
         <!-- Versions in alphabetical order -->
         <auto-service.version>1.1.1</auto-service.version>
         <compile-testing.version>0.21.0</compile-testing.version>
         <cglib.version>3.3.0</cglib.version>
         <checker.version>3.37.0</checker.version>
-        <groovy.version>4.0.14</groovy.version>
         <hamcrest.version>2.2</hamcrest.version>
         <jackson.version>2.15.2</jackson.version>
         <jakarta.annotations.version>2.1.1</jakarta.annotations.version>
@@ -23,7 +27,7 @@
         <junit.version>5.10.0</junit.version>
         <logback.version>1.4.11</logback.version>
         <mockito.version>5.2.0</mockito.version>
-        <slf4j.version>2.0.7</slf4j.version>
+        <scala.version>3.3.0</scala.version>
     </properties>
 
     <dependencyManagement>
