#985 Move shared POMs to assembly

--- a/hartshorn-bom/pom.xml
+++ b/hartshorn-bom/pom.xml
@@ -7,8 +7,11 @@
         <groupId>org.dockbox.hartshorn</groupId>
         <artifactId>hartshorn-staging</artifactId>
         <version>0.5.0</version>
-        <relativePath>../staging.pom.xml</relativePath>
+        <relativePath>../hartshorn-assembly/pom.staging.xml</relativePath>
     </parent>
+
+    <name>Hartshorn common BOM</name>
+    <description>Bill of materials for Hartshorn common modules</description>
 
     <artifactId>hartshorn-bom</artifactId>
     <packaging>pom</packaging>
