--- a/hartshorn-config/hartshorn-config-jackson/pom.xml
+++ b/hartshorn-config/hartshorn-config-jackson/pom.xml
@@ -7,9 +7,10 @@
         <groupId>org.dockbox.hartshorn</groupId>
         <artifactId>hartshorn-parent</artifactId>
         <version>0.5.0</version>
-        <relativePath>../../hartshorn-parent/pom.xml</relativePath>
+        <relativePath>../../hartshorn-assembly/pom.parent.xml</relativePath>
     </parent>
 
+    <name>Hartshorn Configuration (Jackson)</name>
     <artifactId>hartshorn-config-jackson</artifactId>
     <packaging>jar</packaging>
 
