--- a/hartshorn-hsl/pom.xml
+++ b/hartshorn-hsl/pom.xml
@@ -7,9 +7,10 @@
         <groupId>org.dockbox.hartshorn</groupId>
         <artifactId>hartshorn-parent</artifactId>
         <version>0.5.0</version>
-        <relativePath>../hartshorn-parent/pom.xml</relativePath>
+        <relativePath>../hartshorn-assembly/pom.parent.xml</relativePath>
     </parent>
 
+    <name>Hartshorn Scripting Language (HSL)</name>
     <artifactId>hartshorn-hsl</artifactId>
     <packaging>jar</packaging>
 
