--- a/hartshorn-introspect/hartshorn-introspect-reflection/pom.xml
+++ b/hartshorn-introspect/hartshorn-introspect-reflection/pom.xml
@@ -7,9 +7,10 @@
         <groupId>org.dockbox.hartshorn</groupId>
         <artifactId>hartshorn-parent</artifactId>
         <version>0.5.0</version>
-        <relativePath>../../hartshorn-parent/pom.xml</relativePath>
+        <relativePath>../../hartshorn-assembly/pom.parent.xml</relativePath>
     </parent>
 
+    <name>Hartshorn Introspection (JDK Reflection)</name>
     <artifactId>hartshorn-introspect-reflection</artifactId>
     <packaging>jar</packaging>
 
