#985 Add assembly POM for coverage aggregation

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
                 <module>hartshorn-config/hartshorn-config-jackson</module>
                 <module>hartshorn-i18n</module>
                 <module>hartshorn-commands</module>
+                <module>hartshorn-assembly/pom.assembly.xml</module>
             </modules>
         </profile>
         <profile>
